--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,15 +1,27 @@
 html, body, div#root{
   margin: 0;
-  height:100vh;
+  min-height:100vh;
+}
+
+body{
+  background-color: rgb(255,145,77);
+  nav.navbar{
+    background-color: inherit;
+    .navbar-menu{
+      background-color: #ffde59;
+      .buttons{
+        justify-content: flex-end;
+      }
+    }
+  }
 }
 
 main{
-  min-height: calc(100% - 52px);
+  min-height: calc(100vh - 52px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  background-color: rgb(255,145,77);
 
   .headline{
     color: white;
@@ -19,7 +31,7 @@ main{
       font-family: serif, cursive;
       font-weight: bold;
       font-size: 5rem;
-      letter-spacing: -2px;
+      letter-spacing: -5px;
     }
     .drip-1{
       font-size: 0.7rem;
@@ -37,16 +49,25 @@ main{
       font-size: 3rem;
       position: absolute;
       top: -5px;
-      left: 62px;
-
+      left: 58px;
+    }
+    .subtitle{
+      color: rgb(82,113,255);
+      font-family: serif, cursive;
+      font-size: 1rem;
+      font-weight: bold;
+      position: absolute;
+      top: 90px;
+      left: 32px;
     }
   }
 
 
   .initial, section{
       //initial styles
-      width: calc(100% - 80px);
-      margin: 40px;
+      width: calc(100% - 160px);
+      margin: 40px 80px;
+      box-shadow: 10px 5px 5px #ffde59;
     }
 
   section{
@@ -56,6 +77,7 @@ main{
     align-items: center;
     justify-content: center;
     color: white;
+    box-shadow: 10px 5px 5px #ffde59;
 
     .title{
       color: white;
@@ -67,7 +89,7 @@ main{
     &.complete{
       //complete styles (api processed succesfully)
       background-color: #23d160;
-      border-radius: 4px;
+      border-radius: 6px;
     }
 
     a.navbar-burger{
@@ -79,7 +101,11 @@ main{
   }
 }
 
-
+section.what-to-wear{
+  div.card-content.card-body-armour p{
+    padding: 3px 0;
+  }
+}
 
 section.travel-status{
   color: black;
