--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -36,34 +36,40 @@ main{
     .title{
       padding-top: 15px;
       color: white;
-      font-family: serif, cursive;
+      font-family: 'Hepta Slab', serif;
       font-weight: bold;
-      font-size: 5rem;
+      font-size: 4rem;
       letter-spacing: -5px;
     }
     .drip{
       font-size: 1.2rem;
       position: absolute;
-      top: 25px;
-      right: 39px;
+      top: 16px;
+      right: 42px;
     }
     .cloud{
       font-size: 3rem;
       position: absolute;
-      top: -5px;
-      left: 58px;
+      top: -12px;
+      left: 52px;
     }
     .subtitle{
       color: white;
       letter-spacing: -1px;
       font-family: sans-serif;
       font-weight: bold;
-      font-size: 1.1rem;
+      font-size: 1rem;
       position: absolute;
-      top: 86px;
-      left: 28px;
+      top: 76px;
+      left: 31px;
     }
   }
+}
+
+h1.title{
+  text-align: center;
+  color: white;
+  text-shadow: 0px 0px 5px white;
 }
 
 .initial, section{
@@ -75,9 +81,13 @@ main{
 }
 
 .initial{
-  font-family: sans-serif;
+  font-family: 'Hepta Slab', serif;
   letter-spacing: -2px;
   color: #ff673a;
+  transition: 0.5s color;
+}
+.initial:hover{
+  border-color: white;
 }
 
 section.section{
@@ -178,7 +188,7 @@ section.travel-status{
 
 
 @media screen and (min-width: 1024px){
-  .navbar-burger {
+  section .navbar-burger {
       display: block;
   }
 }
