--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@ body{
   background-color: #ff673a;
 }
 
+
 nav.navbar{
   background-color: inherit;
   .navbar-menu{
@@ -27,6 +28,11 @@ main{
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+
+  a, a:hover{
+    color: #ff673a;
+  }
+
 
   header{
     color: white;
@@ -86,8 +92,10 @@ h1.title{
   color: #ff673a;
   transition: 0.5s color;
 }
+
 .initial:hover{
   border-color: white;
+  color: #fa3a78;
 }
 
 section.section{
@@ -96,10 +104,33 @@ section.section{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 3.5rem;
+  padding-top: 2.5rem;
   color: black;
   border-radius: 6px;
   background-color: white;
+  
+  h2{
+    font-family: 'Hepta Slab', serif;
+    font-size: 1.5rem;
+    letter-spacing: -2px;
+    color: #ff673a;
+    margin-bottom: 25px;
+  }
+
+  .card{
+    background-image: linear-gradient(145deg, #ff673a, #fa3a78ba);
+    box-shadow: 0 2px 13px rgb(250, 110, 155);
+    color: white;
+    margin: 10px;
+    max-width: 500px;
+    p, strong{
+      color: inherit;
+    }
+    .card-footer, .card-footer-item{
+      border-color: #c2512f;
+    }
+  }
+
   .navbar-burger {
     position: absolute;
     top: 0;
@@ -117,20 +148,17 @@ section.what-to-wear{
 section.travel-status{
   color: black;
 
-  //all the divs, including the first
   article{
     position: relative;
     padding: 0 15px;
     width: 100%;
-    border-width: 1px 1px 0 1px;
-    border-style: solid;
-    border-color: #ddd;
-    background-color: white;
+    border-bottom: 1px solid #c3522f;
     overflow: hidden;
 
     h3{
       margin: 0;
       font-size: 1em;
+      font-weight: bold;
       padding-top: 8px;
     }
 
@@ -150,7 +178,7 @@ section.travel-status{
     }
 
     &.other-status{
-      background-color: lightyellow;
+      background-color: #6f240d;
       padding-right: 50px;
     }
 
@@ -181,7 +209,7 @@ section.travel-status{
   }
 
   article:last-child{
-    border-bottom-width: 1px;
+    border-bottom-width: 0;
   }
 
 }
